--- a/recruit-gui/src/app/suggestions/inline-cv/inline-cv.component.css
+++ b/recruit-gui/src/app/suggestions/inline-cv/inline-cv.component.css
@@ -4,3 +4,30 @@
 	width:95%; 
 	height:500px;
 }
+
+.cv-inline-chat{
+	left:50px;
+	margin:20px;
+	width:60%;
+	border:3px solid black;
+	background:#002549;
+	z-index:1000;
+	position:fixed;
+	top:20%;
+	margin-left:0%;
+	
+}
+
+.action-buttons-cv-inline-chat{
+	margin-right:20px;
+	float:right;
+	margin-top:10px;
+	
+}
+
+.content-cv-inline-chat{
+	margin:0px;
+	width:100%;
+	margin-top:20px;
+	height:470px;	
+}
