messy code but working - mini profile from chat

--- a/recruit-gui/src/app/private-messaging/private-messaging.component.html
+++ b/recruit-gui/src/app/private-messaging/private-messaging.component.html
@@ -45,6 +45,9 @@
 						<span class="chat-header-{{getBlockedStatus()}} material-icons " (click)="toggleBlockUserChat()">block</span>
 						<span class="chat-header-other-user-typing material-icons " *ngIf="otherUserTypeing == true">chat</span>
 						<span class="chatwindow-header-item material-icons" *ngIf="showBtnShowCV()" (click)="showInlineCV()">description</span>
+						<span class="chatwindow-header-item material-icons" *ngIf="showBtnShowCV()" (click)="showCandidateProfile()">info</span>
+						
+						
 					</span>
 				</div>
 				<div class="pm-messages-messages" (scroll)="setScrollOff()">
