public chat with replies

--- a/recruit-gui/src/app/newsfeed/newsfeed.component.html
+++ b/recruit-gui/src/app/newsfeed/newsfeed.component.html
@@ -20,110 +20,10 @@
 		
 		<!-- TODO: THis post-panel section needs to be in separate component so we can use it recursively for nested replies	 -->
 		<div class="posts-panel">
-			<div class="post" *ngFor="let chat of topLevelPosts">
-				<div class="post-header">
-					<img class="public-chat-image" *ngIf="hasImage(chat)"  id='base64image' src='data:image/jpeg;base64, {{getChatParticipantPhoto(chat)}}' />
-					<img class="public-chat-image" *ngIf="!hasImage(chat)" id='base64image'  />
-					<div class="public-chat-owner-name">{{chat.owner.firstName}} {{chat.owner.surname}}</div>
-					<div class="chat-icon material-icons public-chat-option" *ngIf="!isOwnMessage(chat)" (click)="openChat(chat)">chat</div>
-					<div class="chat-icon material-icons public-chat-option" *ngIf="isOwnMessage(chat)" (click)="openDeleteOptionBox(chat)">delete</div>
-					<div class="chat-icon material-icons public-chat-option" *ngIf="isOwnMessage(chat)" (click)="showEditView(chat)">edit</div>
-				</div>
-				
-				<!-- View Mode -->
-				<div class="post-message" *ngIf="!isInEditMode(chat)">{{chat.message}}</div>
-				
-				<!-- Edit Mode -->
-				<div class="edit-post-panel" *ngIf="isInEditMode(chat)">
-					<form [formGroup]="editChatForm">
-						<div class="edit-message-panel-textarea">
-							<textarea class="edit-message-panel-textarea-textarea" formControlName="message">{{chat.message}}</textarea>
-						</div>
-					</form>
-				</div>
-				
-				<!-- Reply Mode -->
-				<div class="reply-post-panel" *ngIf="isInReplyMode(chat)">
-					<form [formGroup]="replyChatForm">
-						<div class="reply-message-panel-textarea">
-							<textarea class="edit-message-panel-textarea-textarea" formControlName="message">{{chat.message}}</textarea>
-						</div>
-					</form>
-				</div>
-				
-				<div class="post-footer">
-					<div *ngIf="!isInEditMode(chat) && !isInReplyMode(chat)">
-					
-					
-						<div class="post-footer-item-left" (click)="toggleReplies(chat)">
-							<span class="chat-footer-total">({{getReplyCount(chat)}})</span>
-							<span>replies</span>
-						</div>
-					
-						<div class="post-footer-item-left">
-							<span class="chat-footer-total" (click)="openLikesOptionBox(chat)">({{chat.likes.length}})</span>
-							<span class="chat-icon material-icons public-chat-option-footer chat-liked-{{isLikedByUser(chat)}}" (click)="toggleLikeForChat(chat)">thumb_up</span>
-						</div>
-						
-						<span class="post-footer-item-right" (click)="showReplyView(chat)">reply</span>
-						
-					</div>
-					
-					<div *ngIf="isInEditMode(chat)">
-						<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="showFeedView()">Back</button>
-						<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="saveChatUpdate(chat)">Save</button>
-					</div>	
-					<div *ngIf="isInReplyMode(chat)">
-						<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="showFeedView()">Back</button>
-						<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="saveChatReply(chat)">Save</button>
-					</div>	
-				</div>
-				
-				<div class="post-replies" *ngIf="chat.showReplies">
-					<div class="post-reply" *ngFor="let reply of chat.replies">
-						{{reply.message}}
-					</div>
-				</div>
-				
-			</div>
-		</div>
+			<app-public-posts [topLevelPosts]="topLevelPosts" [topLevel]="'true'"></app-public-posts>
+		</div>  	
 	</div>
 </div>
 
 
-<dialog #publicChatDeleteConfirmBox>
-	<div class="modal-header">
-		<h4 class="modal-title">{{'confirm-box-header' | translate}}</h4>
-		<div class="filter-close-box" (click)="closeDeleteOptionBox()">X</div>
-	</div>
-	<div class="modal-body">
-		<div class="confirm-chat-delete-box">
-			<button class="btn btn-secondary arenella-btn" (click)="closeDeleteOptionBox()">{{'cancel-btn' | translate}}</button>
-			<button class="btn btn-secondary arenella-btn" (click)="deleteChat()">{{'confirm-btn' | translate}}</button>
-		</div>
-	</div>	
-</dialog>
 
-<dialog #publicChatLikes>
-	<div class="modal-header">
-		<h4 class="modal-title"></h4>
-		<div class="filter-close-box" (click)="closeLikesOptionBox()">X</div>
-	</div>
-	<div class="modal-body participant-likes">
-		<div *ngFor="let participant of likeChatParticipants">
-		
-			<div style="clear:both">
-				<div style="float:left;">
-					<img class="public-chat-image" *ngIf="participant.photo"  id='base64image' src='data:image/jpeg;base64, {{participant.photo.imageBytes}}' />
-					<img class="public-chat-image" *ngIf="!participant.photo" id='base64image'/>
-				</div>
-				<div class="like-participant-name">
-					{{participant.firstName}} {{participant.surname}}
-				</div>
-				<div class="like-participant-chat">
-					<div class="chat-icon material-icons public-chat-option" *ngIf="!isOwnMessageChatParticipant(participant)" (click)="openChatChatParticipant(participant)">chat</div>
-				</div>
-			</div>
-		</div>
-	</div>	
-</dialog>
