--- a/recruit-gui/src/app/newsfeed/newsfeed.component.css
+++ b/recruit-gui/src/app/newsfeed/newsfeed.component.css
@@ -193,6 +193,34 @@
 	margin-right:10px;
 }
 
+.public-chat-notification-panel-notifications{
+	overflow-y:true;
+}
+
+.notification-public-chat{
+	cursor:pointer;
+	width:100%;
+	float:none;
+	margin-bottom:5px;
+}
+
+.notification-public-chat-image{
+	float:left;
+	width:32px;
+	height:32px;
+	margin-left:5px;
+	margin-top:5px;
+	margin-right:10px;
+}
+
+.notification-public-chat-name{
+	padding-top:10px;
+	font-weight:bold;
+	float:left;
+	margin-left:10px;	
+
+}
+
 @media (max-width: 768px) {
 	.newsfeed-boop-panel{
 		display:none;
