--- a/recruit-gui/src/app/newsfeed/newsfeed.component.html
+++ b/recruit-gui/src/app/newsfeed/newsfeed.component.html
@@ -6,12 +6,12 @@
 	
 	<div class="newsfeed-notification-panel">
 		<div class="header">Notifications</div>
-		<div>
-			<div *ngFor="let notification of notifications" class="public-chat-notification-panel-notifications">
+		<div class="public-chat-notification-panel-notifications">
+			<div *ngFor="let notification of notifications">
 			
 				<div *ngIf="notification.initiatingUser" >
 					
-					<div class="notification-public-chat">
+					<div class="notification-public-chat" (click)="loadNotification(notification)">
 						<div style="float:left">
 							<img class="notification-public-chat-image" id='base64image' *ngIf="notification.initiatingUser.photo" src='data:image/jpeg;base64, {{notification.initiatingUser.photo.imageBytes}}' />
 							<img class="notification-public-chat-image" *ngIf="!notification.initiatingUser.photo" id='base64image' src="../assets/img/default-user-image.jpg" />
@@ -35,8 +35,13 @@
 		</div>
 		
 		<!-- TODO: THis post-panel section needs to be in separate component so we can use it recursively for nested replies	 -->
-		<div class="posts-panel">
+		
+		<div class="posts-panel" *ngIf="newsFeedPane == 'NEWSFEED'">
 			<app-public-posts [topLevelPosts]="topLevelPosts" [topLevel]="'true'" (replyAddedEvent)="resetScroll()"></app-public-posts>
+		</div>
+		<div class="single-post-panel" *ngIf="newsFeedPane == 'SINGLEPOST'">
+			<button class="btn btn-secondary arenella-btn" style="width:100%;text-align:center;" (click)="closeNotificationView()">Close</button>
+			<app-public-posts [topLevelPosts]="topLevelPosts" [topLevel]="'false'" (replyAddedEvent)="handleReplyForNotification()"></app-public-posts>
 		</div>  	
 	</div>
 </div>
