--- a/recruit-gui/src/app/newsfeed/public-posts/public-posts.component.html
+++ b/recruit-gui/src/app/newsfeed/public-posts/public-posts.component.html
@@ -2,7 +2,8 @@
 	<div class="post-header replyCssClass{{replyCssClass}}">
 		<img class="public-chat-image" *ngIf="hasImage(chat)"  id='base64image' src='data:image/jpeg;base64, {{getChatParticipantPhoto(chat)}}' />
 		<img class="public-chat-image" *ngIf="!hasImage(chat)" id='base64image' src="../assets/img/default-user-image.jpg"  />
-		<div class="public-chat-owner-name">[ {{chat.owner.type | translate}} ] - {{chat.owner.firstName}} {{chat.owner.surname}}</div>
+		<div class="public-chat-owner-name mobile-only-element">{{cappedLengthStringMobile(chat.owner.firstName + " " + chat.owner.surname)}}</div>
+		<div class="public-chat-owner-name non-mobile-only-element">[ {{chat.owner.type | translate}} ] - {{chat.owner.firstName}} {{chat.owner.surname}}</div>
 		<div class="chat-icon material-icons public-chat-option" *ngIf="!isOwnMessage(chat)" (click)="openChat(chat)">chat</div>
 		<div class="chat-icon material-icons public-chat-option" *ngIf="isOwnMessage(chat)" (click)="openDeleteOptionBox(chat)">delete</div>
 		<div class="chat-icon material-icons public-chat-option" *ngIf="isOwnMessage(chat)" (click)="showEditView(chat)">edit</div>
