--- a/recruit-gui/src/app/newsfeed/public-posts/public-posts.component.html
+++ b/recruit-gui/src/app/newsfeed/public-posts/public-posts.component.html
@@ -62,13 +62,13 @@
 			<button class="btn btn-secondary arenella-btn edit-chat-button" (click)="saveChatReply(chat)">Save</button>
 		</div>	
 	</div>
-	
+
 	<div *ngIf="chat.showReplies">
 		<div style="border-top:1px solid grey;margin-top:5px;width:100%;height:30px;" (click)="toggleReplies(chat)">
 			<span style="float:right;font-weight:bold;cursor:pointer;margin-top:10px;margin-right:10px;">Close</span>
 		</div>
 		<div>
-			<app-public-posts [topLevel]="'False'" [currentTopLevelChatId]="chat.id" [parentCss]="replyCssClass"></app-public-posts>
+			<app-public-posts [topLevel]="'False'" [currentTopLevelChatId]="chat.id" [notificationPath]="notificationPath" [parentCss]="replyCssClass"></app-public-posts>
 		</div>
 		
 	</div>
