--- a/recruit-gui/src/app/newsfeed/public-posts/public-posts.component.css
+++ b/recruit-gui/src/app/newsfeed/public-posts/public-posts.component.css
@@ -214,6 +214,10 @@
 	margin-right:20px;
 }
 
+.current-notification-true{
+	background:green;
+}
+
 @media (max-width: 768px) {
 	.newsfeed-boop-panel{
 		display:none;
