--- a/recruit-gui/src/app/newsfeed/public-posts/public-posts.component.html
+++ b/recruit-gui/src/app/newsfeed/public-posts/public-posts.component.html
@@ -1,10 +1,10 @@
-<div class="post" *ngFor="let chat of topLevelPosts">
-	<div class="post-header replyCssClass{{replyCssClass}}">
+<div class="post" *ngFor="let chat of topLevelPosts" id="chat-id-{{chat.id}}">
+	<div class="post-header replyCssClass{{replyCssClass}} current-notification-{{isCurrentNotification(chat)}}">
 		<img class="public-chat-image" *ngIf="hasImage(chat)"  id='base64image' src='data:image/jpeg;base64, {{getChatParticipantPhoto(chat)}}' />
 		<img class="public-chat-image" *ngIf="!hasImage(chat)" id='base64image' src="../assets/img/default-user-image.jpg"  />
 		<div class="public-chat-owner-name mobile-only-element">{{cappedLengthStringMobile(chat.owner.firstName + " " + chat.owner.surname)}}</div>
 		<div class="public-chat-owner-name non-mobile-only-element">[ {{chat.owner.type | translate}} ] - {{chat.owner.firstName}} {{chat.owner.surname}}</div>
-		<div class="chat-icon material-icons public-chat-option" *ngIf="!isOwnMessage(chat)" (click)="openChat(chat)">chat</div>
+		<div class="chat-icon material-icons public-chat-option" *ngIf="!isOwnMessage(chat) && !isCandidate() && chatIsNotOwnerByRecruiter(chat)" (click)="openChat(chat)">chat</div>
 		<div class="chat-icon material-icons public-chat-option" *ngIf="isOwnMessage(chat)" (click)="openDeleteOptionBox(chat)">delete</div>
 		<div class="chat-icon material-icons public-chat-option" *ngIf="isOwnMessage(chat)" (click)="showEditView(chat)">edit</div>
 	</div>
